[package]
name = "wifi-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = "1.1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10" 
ctrlc = "3.2"
libc = "0.2"
actix-web = "4.3.1"
hmac = "0.12.1"
sha2 = "0.10.6"
sha1 = "0.10.5"
pbkdf2 = "0.12.1"
aes = "0.8.2"
ccm = "0.5.0"
lazy_static = "1.4.0"

[build-dependencies]
bindgen = "0.59" 

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3